Add create note feature

--- a/Frontend/src/app/components/main-page/main-page.component.html
+++ b/Frontend/src/app/components/main-page/main-page.component.html
@@ -10,8 +10,10 @@
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <a href="#" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white" aria-current="page">Add Notes</a>
-              <a href="#" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">See Notes</a>
+              <button type="button" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white cursor-pointer"
+                      (click)="changeTab('add')">Add Notes</button>
+              <button type="button" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white cursor-pointer"
+                      (click)="changeTab('see')">See Notes</button>
             </div>
           </div>
         </div>
@@ -109,17 +111,25 @@
       </div>
     </div>
   </nav>
+  @if (currentComponent == "add"){
+    <header class="bg-white shadow-sm">
+      <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">Add Notes</h1>
+      </div>
+    </header>
+    <main class="min-h-screen flex items-center justify-center">
+      <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+        <!-- Your content -->
+        <app-add-note></app-add-note>
+      </div>
+    </main>
+  } @else if (currentComponent == "see"){
+    <header class="bg-white shadow-sm">
+      <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">See Notes</h1>
+      </div>
+    </header>
+  }
 
-  <header class="bg-white shadow-sm">
-    <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-      <h1 class="text-3xl font-bold tracking-tight text-gray-900">Add Notes</h1>
-    </div>
-  </header>
-  <main>
-    <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-      <!-- Your content -->
 
-
-    </div>
-  </main>
 </div>
