--- a/Frontend/src/app/components/add-note/add-note.component.html
+++ b/Frontend/src/app/components/add-note/add-note.component.html
@@ -1,20 +1,10 @@
-<button type="submit" class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800">
-  +
+<button type="submit"
+        class="add-button w-14 h-14 rounded-full flex items-center justify-center text-white font-bold text-xl cursor-pointer border-0 focus:outline-none focus:ring-4 focus:ring-purple-300"
+        (click)="pushedBtn()">
+  <span class="plus-icon">+</span>
 </button>
-<form>
-  <div class="mb-5">
-    <label for="base-input" class="block mb-2 text-sm font-medium text-white-900 dark:text-white">Base input</label>
-    <input type="text" id="base-input" class="bg-white-50 border border-white-300 text-white-900 text-sm rounded-lg  block w-full p-2.5 dark:bg-white-700 dark:border-gray-600 dark:placeholder-white-400 white:text-dark focus:outline-none " placeholder="Title..." required>
-  </div>
-  <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-gray-700 dark:border-gray-600">
-    <div class="px-4 py-2 bg-white rounded-t-lg ">
-      <label for="comment" class="sr-only">Your comment</label>
-      <textarea id="comment" rows="10" class="w-full border-white  px-0 text-sm  bg-white border-0   white:text-dark focus:outline-none  " placeholder="Write your thoughts..." required ></textarea>
-    </div>
-    <div class="flex items-center justify-between px-3 py-2 border-t dark:border-gray-600 border-gray-200">
-      <button type="submit" class="inline-flex items-center py-2.5 px-4 text-xs font-medium text-center text-white bg-blue-700 rounded-lg focus:ring-4 focus:ring-blue-200 dark:focus:ring-blue-900 hover:bg-blue-800">
-        Add Note
-      </button>
-    </div>
-  </div>
-</form>
+<div>
+  @if (isBtnPushed){
+    <app-new-note></app-new-note>
+  }
+</div>
