Add Your notes section to see Active and Archived notes

--- a/Frontend/src/app/components/main-page/main-page.component.html
+++ b/Frontend/src/app/components/main-page/main-page.component.html
@@ -10,10 +10,10 @@
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <button type="button" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white cursor-pointer"
+              <button type="button" class="rounded-md  active:bg-gray-900  px-3 py-2 text-sm font-medium text-white hover:bg-gray-700 hover:text-white cursor-pointer"
                       (click)="changeTab('add')">Add Notes</button>
-              <button type="button" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white cursor-pointer"
-                      (click)="changeTab('see')">See Notes</button>
+              <button type="button" class="rounded-md px-3  active:bg-gray-900  py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white cursor-pointer"
+                      (click)="changeTab('see')">Your Notes</button>
             </div>
           </div>
         </div>
@@ -86,7 +86,7 @@
       <div class="space-y-1 px-2 pt-2 pb-3 sm:px-3">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Add Notes</a>
-        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">See Notes</a>
+        <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Your Notes</a>
       </div>
       <div class="border-t border-gray-700 pt-4 pb-3">
         <div class="flex items-center px-5">
@@ -126,10 +126,14 @@
   } @else if (currentComponent == "see"){
     <header class="bg-white shadow-sm">
       <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
-        <h1 class="text-3xl font-bold tracking-tight text-gray-900">See Notes</h1>
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900">Your Notes</h1>
       </div>
+      <main class="flex items-center justify-center">
+        <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+          <!-- Your content -->
+          <app-see-notes></app-see-notes>
+        </div>
+      </main>
     </header>
   }
-
-
 </div>
